# groundstate-preparation-via-lindbladians

./: .gitignore  README.md  pyproject.toml
data/: TFIM_2_15_ALL_PICKLED_K_2025-09-10.pickle  TFIM_2_ALL_PICKLED_K_2025-09-10.pickle  TFIM_2_psi0_2025-09-10.npy  TFIM_2_psi_GS_2025-09-10.npy  bqskit2_15_qubits.qasm  bqskit2_qubits.qasm  experiment.json  output2_15_qubits.qasm  output2_qubits.qasm
examples/: check_matrices.py  extract_unitaries.py  generate_path.py  lindblad.py  qiskit_opt.py  simulate_alg.py  simulate_algorithm.py  simulate_lindbladian.py  tfim4.py  utils.py
examples/data/: TFIM2GS.pickle  TFIM2_KTilde.pickle  TFIM3_KTilde.pickle  bqskit.qasm  bqskit2.qasm  bqskit3.qasm  dilated_expK.pickle  evolutionH.pickle  output.qasm  output2.qasm  output3.qasm  outputbqskit.qasm
lindbladian_sim/: util.py
