[project]
name = "groundstate-preparation-via-lindbladians"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bqskit>=1.2.0",
    "mqt-qmap>=3.1.3",
    "numpy>=2.2.5",
    "pennylane>=0.41.1",
    "qiskit>=2.0.0",
    "quspin>=1.0.0",
    "qutip>=5.1.1",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.12",
]
